Viacoin: tweak app settings

--- a/app-template/copay/appConfig.json
+++ b/app-template/copay/appConfig.json
@@ -3,7 +3,7 @@
   "packageDescription": "Copay Viacoin Wallet",
   "packageNameId": "org.viacoin.copay",
   "themeColor": "#192c3a",
-  "userVisibleName": "Copay Viacoin",
+  "userVisibleName": "Viacoin Copay",
   "purposeLine": "Copay Viacoin Wallet",
   "bundleName": "copay",
   "appUri": "copay",
@@ -15,7 +15,7 @@
   "gitHubRepoUrl": "git://github.com/bitpay/copay.git",
   "gitHubRepoBugs": "https://github.com/bitpay/copay/issues",
   "disclaimerUrl": "https://copay.io/disclaimer",
-  "url": "https://copay.io",
+  "url": "https://viacoin.org",
   "appDescription": "Copay Viacoin Wallet",
   "winAppName": "CopayWallet",
   "WindowsStoreIdentityName": "18C7659D.Copay-SecureBitcoinWallet",
