Viacoin: tweaked even more names

--- a/app-template/copay/appConfig.json
+++ b/app-template/copay/appConfig.json
@@ -7,14 +7,14 @@
   "purposeLine": "Copay Viacoin Wallet",
   "bundleName": "copay",
   "appUri": "copay",
-  "name": "copay",
-  "nameNoSpace": "copay",
-  "nameCase": "Copay",
-  "nameCaseNoSpace": "Copay",
+  "name": "viacoin copay",
+  "nameNoSpace": "viacoincopay",
+  "nameCase": "Viacoin Copay",
+  "nameCaseNoSpace": "ViacoinCopay",
   "gitHubRepoName": "copay",
-  "gitHubRepoUrl": "git://github.com/bitpay/copay.git",
-  "gitHubRepoBugs": "https://github.com/bitpay/copay/issues",
-  "disclaimerUrl": "https://copay.io/disclaimer",
+  "gitHubRepoUrl": "git://github.com/viacoin/copay.git",
+  "gitHubRepoBugs": "https://github.com/viacoin/copay/issues",
+  "disclaimerUrl": "https://viacoin.org/disclaimer",
   "url": "https://viacoin.org",
   "appDescription": "Copay Viacoin Wallet",
   "winAppName": "CopayWallet",
