--- a/app-template/copay/appConfig.json
+++ b/app-template/copay/appConfig.json
@@ -1,28 +1,28 @@
 {
-  "packageName": "copay-viacoin",
-  "packageDescription": "Copay Viacoin Wallet",
-  "packageNameId": "org.viacoin.copay",
+  "packageName": "copay-mue",
+  "packageDescription": "Copay MonetaryUnit Wallet",
+  "packageNameId": "org.muecoin.copay",
   "themeColor": "#192c3a",
-  "userVisibleName": "Viacoin Copay",
-  "purposeLine": "Copay Viacoin Wallet",
+  "userVisibleName": "MonetaryUnit Copay",
+  "purposeLine": "Copay MonetaryUnit Wallet",
   "bundleName": "copay",
   "appUri": "copay",
-  "name": "viacoin copay",
-  "nameNoSpace": "viacoincopay",
-  "nameCase": "Viacoin Copay",
-  "nameCaseNoSpace": "ViacoinCopay",
+  "name": "monetaryunit copay",
+  "nameNoSpace": "monetaryunitcopay",
+  "nameCase": "MonetaryUnit Copay",
+  "nameCaseNoSpace": "MonetaryUnitCopay",
   "gitHubRepoName": "copay",
-  "gitHubRepoUrl": "git://github.com/viacoin/copay.git",
-  "gitHubRepoBugs": "https://github.com/viacoin/copay/issues",
-  "disclaimerUrl": "https://viacoin.org/disclaimer",
-  "url": "https://viacoin.org",
-  "appDescription": "Copay Viacoin Wallet",
+  "gitHubRepoUrl": "git://github.com/muecoin/copay.git",
+  "gitHubRepoBugs": "https://github.com/muecoin/copay/issues",
+  "disclaimerUrl": "https://monetaryunit.org/disclaimer",
+  "url": "https://monetaryunit.org",
+  "appDescription": "Copay MonetaryUnit Wallet",
   "winAppName": "CopayWallet",
   "WindowsStoreIdentityName": "18C7659D.Copay-SecureBitcoinWallet",
-  "WindowsStoreDisplayName": "Copay - Secure Viacoin Wallet",
+  "WindowsStoreDisplayName": "Copay - Secure MonetaryUnit Wallet",
   "windowsAppId": "804636ee-b017-4cad-8719-e58ac97ffa5c",
   "pushSenderId": "1036948132229",
-  "description": "A Secure Viacoin Wallet",
+  "description": "A Secure MonetaryUnit Wallet",
   "version": "4.3.2",
   "androidVersion": "43000002",
   "_extraCSS": null,
