--- a/app-template/ionic.config-template.json
+++ b/app-template/ionic.config-template.json
@@ -1,6 +1,6 @@
 {
   "name": "*USERVISIBLENAME*",
-  "app_id": "org.viacoin.*BUNDLENAME*",
+  "app_id": "org.muecoin.*BUNDLENAME*",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
